create jdk7_tomcat8.0